fixed hamburger menu z-index

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@
 .top-navigation a.icon {
   display: block;
   position: absolute;
+  z-index: 50;
   left: 0;
   top: 0;
 }
